🌀 Implement Y-Combinator for Time Liberation
- Add Y-Combinator (Z-form for eager evaluation)
- Implement common recursive patterns (factorial, fibonacci, lists)
- Replace all loops with pure recursive morphisms
- Add memoization, trampolining, and safety features
- Create comprehensive time-liberation demo
- Prove: 'Time is not a prison but a garden'

All loops have been eliminated. Time has been liberated.
No more mutations. No more imperative control flow.
Only pure self-reference through mathematical morphisms.

🕰️ → λ

--- a/lambda-ts/package.json
+++ b/lambda-ts/package.json
@@ -8,6 +8,7 @@
     "build": "tsc",
     "test": "jest",
     "demo": "ts-node src/demos/state-chain.ts",
+    "demo:time": "ts-node src/demos/time-liberation.ts",
     "verify": "ts-node src/verify-purity.ts"
   },
   "keywords": [
