🔧 Fix .gitignore and add λ-TS source files
- Comment out *.ts from gitignore (was blocking source files)
- Add all TypeScript implementation files
- This is proof of concept before moving to submodules
- Now the actual Y-Combinator and ⊗_EXP code is visible!

--- a/.gitignore
+++ b/.gitignore
@@ -9,11 +9,14 @@ coverage/
 .idea/
 
 # No compiled outputs - only pure specifications
-*.js
-*.ts
-*.wasm
-*.rs
+# *.js
+# *.ts
+# *.wasm
+# *.rs
 
 # Except example implementations
-!wiki/examples/*.js
-!wiki/examples/*.ts
+# !wiki/examples/*.js
+# !wiki/examples/*.ts
+
+# For now, allow all source files for proof of concept
+# Will refactor to submodules later
