--- a/lambda-ts/package.json
+++ b/lambda-ts/package.json
@@ -9,6 +9,8 @@
     "test": "jest",
     "demo": "ts-node src/demos/state-chain.ts",
     "demo:time": "ts-node src/demos/time-liberation.ts",
+    "demo:form": "ts-node src/demos/form-liberation.ts",
+    "demo:all": "npm run demo && npm run demo:time && npm run demo:form",
     "verify": "ts-node src/verify-purity.ts"
   },
   "keywords": [
