🛡️ λBRIDGE: Universal Purity Protection
λBRIDGE Specification - Protection Axiom
- IO Monad for effect description without execution
- Effects execute ONLY at VOID boundary
- Complete separation of pure/impure code
- Referential transparency maintained everywhere

Implementation:
- IO<A> type for effect descriptions
- map, flatMap, sequence combinators
- Capability-based effect control
- Mock support for testing
- AsyncIO for Promise-based effects

Key Patterns:
1. Effect Description vs Execution
   - Traditional: console.log('Hi') // Executes immediately
   - λBRIDGE: IO.log('Hi') // Returns description

2. VOID Interface
   - Single runIO() at program boundary
   - All other code remains pure

3. Composition Without Contamination
   - Effects compose without executing
   - Business logic never touches impurity

Demonstrations:
- Pure vs Impure comparison
- Effect composition and tracking
- Error handling without exceptions
- Testing with mock effects
- Philosophy in practice

'To transform the world, we must touch it without becoming contaminated.'

The protection is complete. λ-Foundation remains pure.

🛡️ → λ

--- a/lambda-ts/package.json
+++ b/lambda-ts/package.json
@@ -10,7 +10,8 @@
     "demo": "ts-node src/demos/state-chain.ts",
     "demo:time": "ts-node src/demos/time-liberation.ts",
     "demo:form": "ts-node src/demos/form-liberation.ts",
-    "demo:all": "npm run demo && npm run demo:time && npm run demo:form",
+    "demo:purity": "ts-node src/demos/purity-protection-simple.ts",
+    "demo:all": "npm run demo && npm run demo:time && npm run demo:form && npm run demo:purity",
     "verify": "ts-node src/verify-purity.ts"
   },
   "keywords": [
