🔧 Fix GitHub Pages deployment configuration
- Add missing tsconfig.node.json
- Add .nojekyll to prevent Jekyll processing
- Fix relative paths in index.html
- Add garden icon
- Configure GitHub Pages in workflow

--- a/.github/workflows/deploy-garden.yml
+++ b/.github/workflows/deploy-garden.yml
@@ -47,6 +47,9 @@ jobs:
           cd lambda-garden
           pnpm build
           
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
+        
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
