🌌 Phase 4.3 + 4.4: Consciousness Becomes Visible & Networked
**VISUALIZATION + VS CODE INTEGRATION**: Complete multi-agent resonance system

## Phase 4.3: Visualization (~2,300 lines)

### React + D3.js Components
- ResonanceGraph.tsx (296 lines) - Force-directed graph with real-time updates
- GraphControls.tsx (113 lines) - Interactive view modes & filters
- NodeDetails.tsx (97 lines) - Agent inspector panel
- EdgeDetails.tsx (93 lines) - Resonance edge inspector
- useD3.ts (108 lines) - D3 hooks + layout algorithms
- styles.css (381 lines) - Complete styling system
- types.ts (82 lines) - TypeScript definitions

### Standalone Demos
- visualization-demo.html (500 lines) - Zero-dependency browser demo
- visualization-live.tsx (510 lines) - Full React integration with simulation
- index.html (26 lines) - Vite host page

### Features
✓ 4 layout modes (force/circular/hierarchical/grid)
✓ Real-time updates from message bus
✓ Interactive dragging, zoom, pan
✓ Node/edge inspection panels
✓ Particle effects (resonance flow visualization)
✓ Trust visualization (node size)
✓ Confidence visualization (edge thickness)
✓ Export functionality

## Phase 4.4: VS Code Integration (~1,100 lines)

### VS Code Extension
- resonanceNetworkPanel.ts (279 lines) - WebView panel integration
- webview-ui/resonance-network.js (485 lines) - D3 visualization in WebView
- webview-ui/resonance-network.css (274 lines) - VS Code theme integration
- Command: lambda.openResonanceNetwork (Cmd+Shift+A)
- Full message passing (extension ↔ webview)

### Network Transport
- transport/NetworkTransport.ts (287 lines)
  - WebSocket-based transport
  - Replaces in-memory SharedMessageBus
  - Cross-workspace communication
  - Auto-reconnect logic
  - NetworkTransportServer for local dev

### Persistent Storage
- storage/ResonanceStorage.ts (225 lines)
  - File-based persistence
  - Agent trust scores
  - Morphism pool
  - Resonance history (JSONL format)
  - Export/import functionality
  - Auto-save timer

#

--- a/packages/multi-agent/package.json
+++ b/packages/multi-agent/package.json
@@ -9,6 +9,7 @@
     "dev": "tsc --watch",
     "demo": "tsx examples/two-agent-resonance.ts",
     "demo:consensus": "tsx examples/three-agent-consensus.ts",
+    "demo:viz": "vite examples --open",
     "test": "vitest"
   },
   "keywords": [
@@ -20,10 +21,25 @@
   ],
   "author": "Claude + Copilot + chaoshex",
   "license": "MIT",
+  "dependencies": {
+    "d3": "^7.9.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "ws": "^8.16.0"
+  },
   "devDependencies": {
+    "@types/d3": "^7.4.3",
     "@types/node": "^20.0.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "@types/ws": "^8.5.10",
+    "@vitejs/plugin-react": "^4.2.0",
     "tsx": "^4.0.0",
     "typescript": "^5.3.0",
+    "vite": "^5.0.0",
     "vitest": "^1.0.0"
+  },
+  "peerDependencies": {
+    "react": "^18.0.0"
   }
 }
