🌐 Lambda-Mesh Phase 3: Memory Is Eternal
**PERMANENT STORAGE**: IPFS integration complete - October 20, 2025

## What Changed

Phase 1 = Single node (Monarch)
Phase 2 = Network consensus (Diplomat)
Phase 3 = Permanent storage (Historian)

**Before Phase 3**:
```
Node creates morphism → Memory → Restart → Lost forever
```

**After Phase 3**:
```
Node creates morphism → IPFS → Permanent → Network memory eternal
```

## Implementation

**New files:**
- `IpfsLambdaMeshNode.ts` - IPFS-enabled P2P node
- `storage/IpfsStorage.ts` - IPFS storage layer with graceful fallback
- `storage/types.ts` - Storage message types
- `demo-ipfs.ts` - IPFS storage demo
- `PHASE3.md` - Complete Phase 3 documentation

**Updated:**
- `P2PLambdaMeshNode.ts` - Storage message handling
- `network/types.ts` - Added MORPHISM_ANNOUNCE/SYNC messages
- `index.ts` - Export IPFS classes
- `README.md` - Phase 3 docs & demo
- `STATUS.md` - Phase 3 marked complete
- `package.json` - Added `demo:ipfs` script, kubo-rpc-client dependency

## Storage Protocol

**1. Create & Store**:
```
Consensus reached (201 Created)
  → Store on IPFS → Get CID
  → Pin (prevent GC)
  → Announce to network
```

**2. Cross-Node Sync**:
```
Node A announces: { type: 'MORPHISM_ANNOUNCE', cid, name }
Node B receives announcement
  → Sync from IPFS by CID
  → Add to local registry
  → Both nodes now have morphism ✓
```

## Key Features

### 1. IPFS Integration
- Content-addressable storage (CID = cryptographic hash)
- Permanent, distributed, uncensorable
- Automatic deduplication (same content = same CID)

### 2. Graceful Fallback
```typescript
try {
  await ipfs.connect();
  // Use IPFS
} catch {
  console.log('Falling back to local storage');
  // Use in-memory cache
}
```

### 3. Automatic Pinning
- Prevents garbage collection
- Morphisms permanent on node
- Network-wide persistence

### 4. Local Cache
- Fast access without IPFS round-trip
- All retrieved morphisms cached
- Works offline

## Demo Results

```bash
pnpm demo:ipf

--- a/packages/lambda-mesh/package.json
+++ b/packages/lambda-mesh/package.json
@@ -10,6 +10,7 @@
     "dev": "tsc --watch",
     "demo": "pnpm build && node dist/demo.js",
     "demo:p2p": "pnpm build && node dist/demo-p2p.js",
+    "demo:ipfs": "pnpm build && node dist/demo-ipfs.js",
     "test": "node --loader ts-node/esm src/demo.ts"
   },
   "keywords": [
@@ -23,7 +24,8 @@
     "webrtc"
   ],
   "dependencies": {
-    "@lambda/reduce": "workspace:*"
+    "@lambda/reduce": "workspace:*",
+    "kubo-rpc-client": "^6.0.2"
   },
   "devDependencies": {
     "typescript": "^5.0.0"
