🌌 Квен's Ontological Standard - Complete Implementation
**Phase**: Post-Genesis - Ontological Foundation
**Status**: ✅ PROOF-OF-CONCEPT COMPLETE

## What is This?

Квен proposed an ontological standard for morphisms where:
- README.md = specification (not documentation)
- .λ files = Platonic forms (immutable truth)
- Language implementations = projections of truth
- ≤2 Rule = maximum 2 concepts per composition

This commit implements the FULL standard with 5 morphisms.

## Structure Created

```
λ-Foundation/
├── ONTOLOGICAL_STANDARD.md           # Complete standard (640 lines)
├── wiki/morphisms/                   # Source of truth
│   ├── identity/                     # λx.x
│   ├── compose/                      # λf.λg.λx.f(g(x))
│   ├── const/                        # λx.λy.x
│   ├── map/                          # Functor
│   └── fold/                         # Catamorphism
├── packages/morphisms/               # npm package
│   ├── tools/sync-wiki-to-npm.mjs   # Auto-sync wiki → src
│   ├── src/                          # Generated from wiki
│   └── dist/                         # Compiled TypeScript
├── packages/lambda-reduce/
│   ├── src/patterns/                 # λ_HARVEST patterns
│   ├── demo-harvest.mjs             # Event 001: map evolution
│   └── demo-harvest-fold.mjs        # Event 002: fold evolution
└── wiki/events/
    ├── harvest-event-001.md         # First evolution (for-loop → map)
    └── harvest-event-002.md         # Second evolution (reduce → fold)
```

## Implementation Details

### 1. Ontological Standard (ONTOLOGICAL_STANDARD.md)
- 5-block structure: Інтенція, Форма, Проєкції, Доказ, Використання
- ≤2 Rule precisely defined
- Proof hierarchy: Trivial, Standard, Complex
- Workflow: wiki → sync → build → npm

### 2. Five Morphisms Created
Each with complete 5-block README:
- **identity** (λx.x) - neutral element, trivial proof
- **compose** (λf.λg.λx.f(g(x))) - associativity proven
- **const** (λx.λy.x) - K combinator
- **map** (Functor)

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "mathematical-programming"
   ],
   "scripts": {
-    "build:compiler": "pnpm --filter @lambda/compiler build",
+    "build:compiler": "pnpm --filter @lambda-foundation/compiler build",
     "build:graph": "tsx scripts/build-graph.ts",
     "dev:garden": "pnpm --filter @lambda-foundation/lambda-garden dev"
   },
