--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lambda/compiler",
+  "name": "@lambda-foundation/compiler",
   "version": "0.1.0",
   "type": "module",
   "main": "dist/index.js",
