--- a/packages/lambda-reduce/tsconfig.json
+++ b/packages/lambda-reduce/tsconfig.json
@@ -12,7 +12,7 @@
     "resolveJsonModule": true,
     "declaration": true,
     "declarationMap": true,
-    "types": []
+    "types": ["node"]
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "test"]
