Event 016: Meta-Algebra Analysis — Functions Become Structures 🧬
**Algebras are not functions. Algebras are mathematical structures.**

## What Changed

### Core Discovery
Algebras have intrinsic properties that determine safety and optimization:
- Associative: can fold in any grouping
- Commutative: order-independent
- Identity: safe for empty collections
- Idempotent: safe for duplicates

Properties → Classification → Ontological hierarchy

### Implementation

**New: packages/self-modifying/src/meta/**
- `algebraProperties.ts`: Auto-detect properties (associative, commutative, identity, idempotent)
- `algebraClassifier.ts`: Classify into Magma → Semigroup → Monoid → CommutativeMonoid → Group
- `algebraCombinators.ts`: Type-safe composition (parallel, lift, conditional)
- `index.ts`: Clean exports

**New: test-meta-algebras.mjs**
Demonstrates automatic classification:
- sum → CommutativeMonoid (parallelizable) ✅
- product → CommutativeMonoid (parallelizable) ✅
- max → IdempotentCommutativeMonoid (safe for duplicates) ✅
- min → IdempotentCommutativeMonoid (safe for duplicates) ✅

### Documentation

**ONTOLOGICAL_STANDARD.md**: Added Theorem 40 (~220 lines)
- Algebra Classification hierarchy
- Properties → Implications table
- Type safety through properties
- Ontological equivalence (sum ≅ product structurally)

**EVENTS_REGISTRY.md**: Event 016 entry
- Timeline updated (Event 015 → 016 → 017)
- Progress: 4 algebras classified, properties auto-detected
- Theorems table: Added Theorem 40

**package.json**: Added `test-meta-algebras` script

## Philosophical Significance

**Event 015** separated algebra (essence) from coalgebra (structure).

**Event 016** goes deeper: **within algebra**, properties are essence, implementation is accident.

### The Hierarchy

```
Magma (any operation)
  ↓ + associative
Semigroup (can fold)
  ↓ + identity
Monoid (safe for empty)
  ↓ + commutative
CommutativeMonoid (parallelizable)
  ↓ + idempotent
IdempotentCommutativeMonoid (safe for du

--- a/packages/self-modifying/package.json
+++ b/packages/self-modifying/package.json
@@ -16,7 +16,8 @@
     "test-reflection": "node test-reflection.mjs",
     "test-synthesis": "node test-synthesis.mjs",
     "test-self-improvement": "node test-self-improvement.mjs",
-    "test-cross-domain": "node test-cross-domain.mjs"
+    "test-cross-domain": "node test-cross-domain.mjs",
+    "test-meta-algebras": "node test-meta-algebras.mjs"
   },
   "keywords": [
     "lambda-foundation",
