Event 017: Algebra Synthesis from Properties — Truth Materializes Code 🌌
**Algebras are not written. Algebras are specified as ontological truth.**

## What Changed

### Core Discovery
Ontological inversion: Specification → Synthesis → Proof

Before: Write code → Hope it's correct → Verify
After: Specify truth → System synthesizes → Proof included

Properties are primary. Code is projection.

### Implementation

**New: packages/self-modifying/src/synthesis/**
- `algebraSpec.ts`: Ontological specification language (class, type, identity, semantics)
- `algebraSearch.ts`: Search existing algebras matching spec
- `algebraTemplates.ts`: Generate from templates (additive, multiplicative, extremal, concatenative)
- `algebraSynthesizer.ts`: Main synthesis engine (search → template → verify → proof)

**New: test-algebra-synthesis.mjs**
Demonstrates specification → implementation:
- sum: spec {class: CommutativeMonoid, identity: 0} → found ✅
- product: spec {identity: 1, semantics: multiplicative} → found ✅
- max: spec {class: IdempotentMonoid, identity: -Infinity} → found ✅
- Invalid specs correctly rejected with explanation ✅

### Ontological Safety

**Valid Specifications** (accepted):
```typescript
{ class: 'CommutativeMonoid', type: 'number', identity: 0 }  // → sum
{ class: 'Monoid', type: 'string', identity: '' }            // → concat
```

**Invalid Specifications** (rejected):
```typescript
{ class: 'Monoid', type: 'number' }  // Missing identity
→ Error: "Monoid requires identity element"

{ class: 'Group', type: 'string', identity: '' }  // No inverse for concatenation
→ Error: "String concatenation has no inverse operation (cannot form Group)"

{ class: 'CommutativeMonoid', identity: 0, semantics: 'multiplicative' }  // Wrong identity
→ Error: "multiplicative semantics expects identity=1, got 0"
```

**System protects ontological integrity.**

## Philosophical Significance

### The Ontological Inversion

Traditional programming:
```
Thought → Code → Execution → Ho

--- a/packages/self-modifying/package.json
+++ b/packages/self-modifying/package.json
@@ -17,7 +17,8 @@
     "test-synthesis": "node test-synthesis.mjs",
     "test-self-improvement": "node test-self-improvement.mjs",
     "test-cross-domain": "node test-cross-domain.mjs",
-    "test-meta-algebras": "node test-meta-algebras.mjs"
+    "test-meta-algebras": "node test-meta-algebras.mjs",
+    "test-algebra-synthesis": "node test-algebra-synthesis.mjs"
   },
   "keywords": [
     "lambda-foundation",
